AJAX Page Nav -- fixed z-index issue with front page .line-box headings -- style.css

--- a/wp-content/themes/mag-wp/style.css
+++ b/wp-content/themes/mag-wp/style.css
@@ -1161,7 +1161,7 @@ div#placeholder {
 }
 #ajax-page-loader {
 	position: absolute;
-	z-index: 2;
+	z-index: 13;
 	top: 0;
 	left: 0;
 	background-color: rgba(0, 0, 0, 0.5);
@@ -1322,7 +1322,7 @@ kbd.active {
 /* Main Stage header line */
 .line-box { 
 	margin: 7px auto 37px;
-	z-index: 10;
+	z-index: 1;
 	position: relative;
 }
 .line-box .header_line { 
